fix header spacing

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -28,7 +28,7 @@
   font-weight: var(--heading-font-weight);
   hyphens: none;
   line-height: 1.3;
-  margin: 1rem 0 0;
+  margin: 1.5rem 0 0;
 }
 
 .doc > h1.page:first-child {
